--- a/templates/layout.html
+++ b/templates/layout.html
@@ -3,7 +3,7 @@
 <html lang="en">
   <head>
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="http://www.w3schools.com/lib/w3.css">
+<link rel="stylesheet" href="//www.w3schools.com/lib/w3.css">
      
 
     <meta charset="utf-8">
@@ -36,7 +36,7 @@
 </head>
 
   <body>
-<script src="http://code.jquery.com/jquery-latest.js"></script>
+<script src="//code.jquery.com/jquery-latest.js"></script>
 
 
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
