--- a/templates/layout.html
+++ b/templates/layout.html
@@ -3,7 +3,7 @@
 <html lang="en">
   <head>
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href='{{url_for('static',filename="w3.css")'>
+<link rel="stylesheet" href='{{url_for('static',filename="w3.css")}}'>
      
 
     <meta charset="utf-8">
