--- a/templates/layout.html
+++ b/templates/layout.html
@@ -127,7 +127,7 @@ var clock = $('.your-clock').FlipClock({
 
 
       </form>
-<p > Don't have an account? Create one <b><a style="color:black;" href={{url_for('loginwithID')}}>Here</b>.</a>
+<p > Don't have an account? Create one <b><a style="color:black;" href={{url_for('loginWithID')}}>Here</b>.</a>
 
 
       
