--- a/templates/loginWithID.html
+++ b/templates/loginWithID.html
@@ -1,7 +1,7 @@
 {% extends "layout.html" %}
 {% block body %}
 <div class = 'w3-container'>
-<form action="{{ url_for('loginwithID') }}" method = 'post'>
+<form action="{{ url_for('loginWithID') }}" method = 'post'>
   <p>Enter your ID Number Here:</p><br>
   <input class="w3-input" type="text" name="id_number"><br>
   
