--- a/templates/layout.html
+++ b/templates/layout.html
@@ -78,7 +78,8 @@ var clock = $('.your-clock').FlipClock({
 		</div>
     <h3 class = "w3-container w3-center">Remaining time for submissions</h3>
     <div class = "w3-container w3-center">
-<div class="clock w3-center"></div>
+<!--div class="clock w3-center"></div-->
+	    <h2>No longer accepting new submissions</h2>
 </div>
 <script type="text/javascript">
     var date = new Date(2017, 01, 19);
@@ -109,9 +110,9 @@ var clock = $('.your-clock').FlipClock({
 
 
 
-<button onclick="document.getElementById('loginModal').style.display='block'" class="w3-btn">Sign In</button>
+<!--button onclick="document.getElementById('loginModal').style.display='block'" class="w3-btn">Sign In</button-->
 
-  <div id="loginModal" class="w3-modal w3-container w3-center">
+  <!--div id="loginModal" class="w3-modal w3-container w3-center">
     <div class="w3-modal-content">
       <div class="w3-container">
         <span onclick="document.getElementById('loginModal').style.display='none'" class="w3-closebtn">&times;</span>
@@ -135,7 +136,7 @@ var clock = $('.your-clock').FlipClock({
 
       </div>
     </div>
-  </div>
+  </div-->
 
 
 
