--- a/templates/main.html
+++ b/templates/main.html
@@ -3,7 +3,7 @@
 
 <div class = "w3-container text-center">
 <form action = "{{ url_for('submitProject')}}" method = 'get' >
-<button> Create a New Project Submisssion</button>
+<button disabled> Create a New Project Submisssion</button>
 </form>
 
 <h1 class = "w3-container text-center">Student Submissions:</h1>
